[package]
name = "rust-cas"
version = "0.1.0"
authors = ["Andrew Halle <ahalle@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.0", features = ["lexer"] }
regex = "1"
num = { version = "0.3.1", features = ["rand"] }
rand = "0.7.3"

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }
